# newsletter-website-backend

./: .gitignore  Dockerfile  README.md  __version__.py  app.py  data.py  database.py  docker-compose.yml  mongodb.py  pyproject.toml  test
api/: main.py  models.py  mongodb.py
newsletter_api/: app.py  auth.py  cli.py
newsletter_api/db/: mongodb.py
newsletter_api/models/: blocks.py  newsletter.py  user.py
newsletter_api/routers/: newsletter.py
routers/: __init__.py  stonks.py  stonks_logic.py  system.py
