[tool.poetry]
name = "newsletter_api"
version = "0.1.0"
description = ""
authors = ["Sören Michaels <soeren.michaels@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-dotenv = "^0.17.1"
bson = "^0.5.10"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
uvicorn = "^0.14.0"
jedi = "^0.18.0"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
newsletter = 'newsletter_api.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
